tests/invalid/generated_binop_bitor_none_int/main.py
# Auto-generated invalid binop case.
def main() -> None:
    x: None = None
    y: int = 1
    z = x | y
